# Personal-Website

./: .gitignore  AFTER_ACTION_REPORT.md  CHANGELOG.md  CONTACT_FORM_GO_LIVE.md  LOCAL.md  README.md  SECURITY.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
api/: .env.example  .gitignore  README.md  email_sender.py  main.py  pyproject.toml  requirements.txt  schemas.py  turnstile.py
api/content/posts/: README.md  ctf-walkthrough-starter.md  network-scanner-design-notes.md  nexus-phase-1-retrospective.md  project-nexus-architecture-deep-dive.md  security-plus-notes-intro.md  six-sigma-black-belt-at-17.md  why-i-built-c2-from-scratch.md
api/data/: __init__.py  credentials.py  experience.py  external_posts.py  projects.py  services.py
api/tests/: test_main.py
client/: .env.example  .eslintrc.cjs  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/public/: humans.txt  robots.txt  sitemap.xml
client/src/: App.jsx  index.css  main.jsx
client/src/components/: BookCallButton.jsx
client/src/context/: ThemeProvider.jsx
client/src/data/: contactLinks.js  faqs.js
client/src/hooks/: useKeyboardShortcuts.js  useTheme.js
client/src/lib/: api.js  blogFallback.js  contact.js  credentialFallback.js  credentialIcons.js  headshot.js  popColors.js  projectFallback.js  schemas.js
client/src/pages/: AboutPage.jsx  BlogIndex.jsx  BlogPost.jsx  CredentialDetail.jsx  HomePage.jsx  (+9 more)
projects/network-scanner/: README.md  main.py
scripts/: fix-broken-ternaries.mjs  html-to-pdf.mjs
(+57 files in other folders)
