[project]
name = "portfolio-api"
version = "0.1.0"
description = "FastAPI backend for brantsimpson.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic[email]>=2.9.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "python-frontmatter>=1.1.0,<2.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-ignore = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "UP007"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
